# second-brain-rs

./: Cargo.toml  package-lock.json
src/: main.rs
src/models/: db.rs  general.rs  mod.rs
src/services/: chat.rs  db_service.rs  embeddings.rs  mod.rs  new_embeddings_service.rs  search.rs  search_service.rs
src/services/oai/: embeddings.rs  mod.rs
ui/assets/: tailwind.css
ui/templates/: base.html
ui/templates/components/: chat-box-empty.html  chat-box-stream.html  chat-box.html  sys-response.html
ui/templates/components/alerts/: error.html  success.html
ui/templates/new-embeddings/: index.html
ui/templates/root/: index.html
ui/templates/search-route/: index.html
