[package]
name = "second_brain_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.20", features = ["ws", "headers"]}

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.75"
tera = "1.19.1"
sqlx = { version = "0.7", features = ["postgres","runtime-tokio-native-tls", "macros"] }
pgvector = { version = "0.2", features = ["sqlx"] }

serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }

dotenv = "0.15.0"
lazy_static = "1.4.0"
tower-livereload = "0.8.1"

openai = "1.0.0-alpha.13"
